--- a/package.json
+++ b/package.json
@@ -17,15 +17,22 @@
     "license": "MIT",
     "keywords": [],
     "dependencies": {
+        "@radix-ui/react-slot": "^1.2.3",
+        "@tailwindcss/vite": "^4.1.12",
+        "class-variance-authority": "^0.7.1",
+        "clsx": "^2.1.1",
         "keycloakify": "^11.9.3",
+        "lucide-react": "^0.542.0",
         "react": "^18.2.0",
-        "react-dom": "^18.2.0"
+        "react-dom": "^18.2.0",
+        "tailwind-merge": "^3.3.1",
+        "tailwindcss": "^4.1.12"
     },
     "devDependencies": {
         "@eslint/js": "^9.15.0",
-        "storybook": "^8.1.10",
         "@storybook/react": "^8.1.10",
         "@storybook/react-vite": "^8.1.10",
+        "@types/node": "^24.3.0",
         "@types/react": "^18.2.43",
         "@types/react-dom": "^18.2.17",
         "@typescript-eslint/eslint-plugin": "^8.15.0",
@@ -39,11 +46,14 @@
         "eslint-plugin-storybook": "^0.11.1",
         "globals": "^15.12.0",
         "prettier": "3.3.1",
+        "storybook": "^8.1.10",
+        "tw-animate-css": "^1.3.7",
         "typescript": "^5.2.2",
         "typescript-eslint": "^8.15.0",
         "vite": "^5.0.8"
     },
     "engines": {
         "node": "^18.0.0 || >=20.0.0"
-    }
+    },
+    "packageManager": "yarn@4.9.4"
 }
