--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
         "eslint-plugin-react-refresh": "^0.4.14",
         "eslint-plugin-storybook": "^0.11.1",
         "globals": "^15.12.0",
-        "prettier": "3.3.1",
+        "prettier": "^3.6.2",
+        "prettier-plugin-tailwindcss": "^0.6.14",
         "storybook": "^8.1.10",
         "tw-animate-css": "^1.3.7",
         "typescript": "^5.2.2",
