--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,19 +18,10 @@
         "strict": true,
         "noUnusedLocals": true,
         "noUnusedParameters": true,
-        "noFallthroughCasesInSwitch": true,
-
-        /* Shadcn */
-        "baseUrl": ".",
-        "paths": {
-            "@/*": ["./src/*"]
-        }
+        "noFallthroughCasesInSwitch": true
     },
     "include": ["src"],
     "references": [
-        {
-            "path": "./tsconfig.app.json"
-        },
         {
             "path": "./tsconfig.node.json"
         }
