--- a/package.json
+++ b/package.json
@@ -17,6 +17,11 @@
     "license": "MIT",
     "keywords": [],
     "dependencies": {
+        "@fortawesome/fontawesome-free": "^7.0.0",
+        "@fortawesome/fontawesome-svg-core": "^7.0.0",
+        "@fortawesome/free-brands-svg-icons": "^7.0.0",
+        "@fortawesome/free-solid-svg-icons": "^7.0.0",
+        "@fortawesome/react-fontawesome": "^3.0.0",
         "@radix-ui/react-slot": "^1.2.3",
         "@tailwindcss/vite": "^4.1.12",
         "class-variance-authority": "^0.7.1",
