--- a/package.json
+++ b/package.json
@@ -1,65 +1,65 @@
 {
-    "name": "keycloakify-starter",
-    "version": "0.0.0",
-    "description": "Starter for Keycloakify 11",
-    "repository": {
-        "type": "git",
-        "url": "git://github.com/codegouvfr/keycloakify-starter.git"
-    },
-    "type": "module",
-    "scripts": {
-        "dev": "vite",
-        "build": "tsc && vite build",
-        "build-keycloak-theme": "npm run build && keycloakify build",
-        "storybook": "storybook dev -p 6006",
-        "format": "prettier . --write"
-    },
-    "license": "MIT",
-    "keywords": [],
-    "dependencies": {
-        "@fortawesome/fontawesome-free": "^7.0.0",
-        "@fortawesome/fontawesome-svg-core": "^7.0.0",
-        "@fortawesome/free-brands-svg-icons": "^7.0.0",
-        "@fortawesome/free-solid-svg-icons": "^7.0.0",
-        "@fortawesome/react-fontawesome": "^3.0.0",
-        "@radix-ui/react-slot": "^1.2.3",
-        "@tailwindcss/vite": "^4.1.12",
-        "class-variance-authority": "^0.7.1",
-        "clsx": "^2.1.1",
-        "keycloakify": "^11.9.3",
-        "lucide-react": "^0.542.0",
-        "react": "^18.2.0",
-        "react-dom": "^18.2.0",
-        "tailwind-merge": "^3.3.1",
-        "tailwindcss": "^4.1.12"
-    },
-    "devDependencies": {
-        "@eslint/js": "^9.15.0",
-        "@storybook/react": "^8.1.10",
-        "@storybook/react-vite": "^8.1.10",
-        "@types/node": "^24.3.0",
-        "@types/react": "^18.2.43",
-        "@types/react-dom": "^18.2.17",
-        "@typescript-eslint/eslint-plugin": "^8.15.0",
-        "@typescript-eslint/parser": "^8.15.0",
-        "@vitejs/plugin-react": "^4.2.1",
-        "eslint": "^9.15.0",
-        "eslint-config-prettier": "^9.1.0",
-        "eslint-plugin-react": "^7.37.2",
-        "eslint-plugin-react-hooks": "^5.0.0",
-        "eslint-plugin-react-refresh": "^0.4.14",
-        "eslint-plugin-storybook": "^0.11.1",
-        "globals": "^15.12.0",
-        "prettier": "^3.6.2",
-        "prettier-plugin-tailwindcss": "^0.6.14",
-        "storybook": "^8.1.10",
-        "tw-animate-css": "^1.3.7",
-        "typescript": "^5.2.2",
-        "typescript-eslint": "^8.15.0",
-        "vite": "^5.0.8"
-    },
-    "engines": {
-        "node": "^18.0.0 || >=20.0.0"
-    },
-    "packageManager": "yarn@4.9.4"
+  "name": "keycloakify-starter",
+  "version": "v1.0.0-beta.1",
+  "description": "Starter for Keycloakify 11",
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/codegouvfr/keycloakify-starter.git"
+  },
+  "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "build-keycloak-theme": "npm run build && keycloakify build",
+    "storybook": "storybook dev -p 6006",
+    "format": "prettier . --write"
+  },
+  "license": "MIT",
+  "keywords": [],
+  "dependencies": {
+    "@fortawesome/fontawesome-free": "^7.0.0",
+    "@fortawesome/fontawesome-svg-core": "^7.0.0",
+    "@fortawesome/free-brands-svg-icons": "^7.0.0",
+    "@fortawesome/free-solid-svg-icons": "^7.0.0",
+    "@fortawesome/react-fontawesome": "^3.0.0",
+    "@radix-ui/react-slot": "^1.2.3",
+    "@tailwindcss/vite": "^4.1.12",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "keycloakify": "^11.9.3",
+    "lucide-react": "^0.542.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "tailwind-merge": "^3.3.1",
+    "tailwindcss": "^4.1.12"
+  },
+  "devDependencies": {
+    "@eslint/js": "^9.15.0",
+    "@storybook/react": "^8.1.10",
+    "@storybook/react-vite": "^8.1.10",
+    "@types/node": "^24.3.0",
+    "@types/react": "^18.2.43",
+    "@types/react-dom": "^18.2.17",
+    "@typescript-eslint/eslint-plugin": "^8.15.0",
+    "@typescript-eslint/parser": "^8.15.0",
+    "@vitejs/plugin-react": "^4.2.1",
+    "eslint": "^9.15.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-react": "^7.37.2",
+    "eslint-plugin-react-hooks": "^5.0.0",
+    "eslint-plugin-react-refresh": "^0.4.14",
+    "eslint-plugin-storybook": "^0.11.1",
+    "globals": "^15.12.0",
+    "prettier": "^3.6.2",
+    "prettier-plugin-tailwindcss": "^0.6.14",
+    "storybook": "^8.1.10",
+    "tw-animate-css": "^1.3.7",
+    "typescript": "^5.2.2",
+    "typescript-eslint": "^8.15.0",
+    "vite": "^5.0.8"
+  },
+  "engines": {
+    "node": "^18.0.0 || >=20.0.0"
+  },
+  "packageManager": "yarn@4.9.4"
 }
