--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -49,8 +49,8 @@ jobs:
       - run: npm run build-keycloak-theme
       - uses: softprops/action-gh-release@v2
         with:
-          name: Release v${{ needs.check_if_version_upgraded.outputs.to_version }}
-          tag_name: v${{ needs.check_if_version_upgraded.outputs.to_version }}
+          name: Release ${{ needs.check_if_version_upgraded.outputs.to_version }}
+          tag_name: ${{ needs.check_if_version_upgraded.outputs.to_version }}
           target_commitish: ${{ github.head_ref || github.ref }}
           generate_release_notes: true
           draft: false
