--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "keycloakify-starter",
-  "version": "v1.0.0",
+  "version": "1.0.0-beta.1",
   "description": "Starter for Keycloakify 11",
   "repository": {
     "type": "git",
