--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -9,17 +9,22 @@ on:
 
 jobs:
   test:
+    name: Test Keycloak theme
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v5
+      - name: Checkout
+        uses: actions/checkout@v5
       - name: Enable Corepack
         run: corepack enable
-      - uses: actions/setup-node@v4
+      - name: Setup Node
+        uses: actions/setup-node@v4
         with:
           node-version: 24
           cache: "yarn"
-      - uses: bahmutov/npm-install@v1
-      - run: npm run build-keycloak-theme
+      - name: Install dependencies
+        uses: bahmutov/npm-install@v1
+      - name: Test build Keycloak theme
+        run: npm run build-keycloak-theme
 
   check_if_version_upgraded:
     name: Check if version upgrade
@@ -32,24 +37,34 @@ jobs:
       is_upgraded_version: ${{ steps.step1.outputs.is_upgraded_version }}
       is_pre_release: ${{steps.step1.outputs.is_pre_release }}
     steps:
-      - uses: garronej/ts-ci@v2.1.5
+      - name: Check package.json version upgrade
+        uses: garronej/ts-ci@v2.1.5
         id: step1
         with:
           action_name: is_package_json_version_upgraded
           branch: ${{ github.head_ref || github.ref }}
 
   create_github_release:
+    name: Create GitHub Release
     runs-on: ubuntu-latest
     needs: check_if_version_upgraded
     if: needs.check_if_version_upgraded.outputs.is_upgraded_version == 'true'
+    permissions:
+      contents: write
+      packages: write
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout
+        uses: actions/checkout@v4
       - name: Enable Corepack
         run: corepack enable
-      - uses: actions/setup-node@v4
-      - uses: bahmutov/npm-install@v1
-      - run: npm run build-keycloak-theme
-      - uses: softprops/action-gh-release@v2
+      - name: Setup Node
+        uses: actions/setup-node@v4
+      - name: Install dependencies
+        uses: bahmutov/npm-install@v1
+      - name: Build Keycloak Theme
+        run: npm run build-keycloak-theme
+      - name: Create GitHub Release
+        uses: softprops/action-gh-release@v2
         with:
           name: Release v${{ needs.check_if_version_upgraded.outputs.to_version }}
           tag_name: v${{ needs.check_if_version_upgraded.outputs.to_version }}
