chore: bump storybook to 9.1.3, bump deps and devdeps

--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -20,6 +20,7 @@
     "trailingComma": "all",
     "singleAttributePerLine": true,
     "useTabs": false,
+    "plugins": ["prettier-plugin-tailwindcss"],
     "overrides": [
         {
             "files": ["*.yaml", "*.yml", "package*.json"],
@@ -27,6 +28,5 @@
                 "tabWidth": 2
             }
         }
-    ],
-    "plugins": ["prettier-plugin-tailwindcss"]
+    ]
 }
