--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "keycloakify-starter",
-  "version": "1.0.0",
+  "version": "0.0.0",
   "description": "Starter for Keycloakify 11",
   "repository": {
     "type": "git",
@@ -17,49 +17,54 @@
   "license": "MIT",
   "keywords": [],
   "dependencies": {
-    "@fortawesome/fontawesome-free": "^7.0.0",
     "@fortawesome/fontawesome-svg-core": "^7.0.0",
     "@fortawesome/free-brands-svg-icons": "^7.0.0",
     "@fortawesome/free-solid-svg-icons": "^7.0.0",
-    "@fortawesome/react-fontawesome": "^3.0.0",
+    "@fortawesome/react-fontawesome": "^3.0.1",
+    "@hookform/resolvers": "^5.2.1",
+    "@radix-ui/react-checkbox": "^1.3.3",
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-select": "^2.2.6",
+    "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-tooltip": "^1.2.8",
     "@tailwindcss/vite": "^4.1.12",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "keycloakify": "^11.9.3",
+    "keycloakify": "^11.9.4",
     "lucide-react": "^0.542.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1",
+    "react-hook-form": "^7.62.0",
     "tailwind-merge": "^3.3.1",
-    "tailwindcss": "^4.1.12"
+    "tailwindcss": "^4.1.12",
+    "zod": "^4.1.3"
   },
   "devDependencies": {
-    "@eslint/js": "^9.15.0",
-    "@storybook/react": "^8.1.10",
-    "@storybook/react-vite": "^8.1.10",
+    "@eslint/js": "^9.34.0",
+    "@storybook/react-vite": "^9.1.3",
     "@types/node": "^24.3.0",
-    "@types/react": "^18.2.43",
-    "@types/react-dom": "^18.2.17",
-    "@typescript-eslint/eslint-plugin": "^8.15.0",
-    "@typescript-eslint/parser": "^8.15.0",
-    "@vitejs/plugin-react": "^4.2.1",
-    "eslint": "^9.15.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-react": "^7.37.2",
-    "eslint-plugin-react-hooks": "^5.0.0",
-    "eslint-plugin-react-refresh": "^0.4.14",
-    "eslint-plugin-storybook": "^0.11.1",
-    "globals": "^15.12.0",
+    "@types/react": "^19.1.11",
+    "@types/react-dom": "^19.1.8",
+    "@typescript-eslint/eslint-plugin": "^8.41.0",
+    "@typescript-eslint/parser": "^8.41.0",
+    "@vitejs/plugin-react": "^5.0.1",
+    "eslint": "^9.34.0",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "eslint-plugin-react-refresh": "^0.4.20",
+    "eslint-plugin-storybook": "^9.1.3",
+    "globals": "^16.3.0",
     "prettier": "^3.6.2",
     "prettier-plugin-tailwindcss": "^0.6.14",
-    "storybook": "^8.1.10",
+    "storybook": "^9.1.3",
     "tw-animate-css": "^1.3.7",
-    "typescript": "^5.2.2",
-    "typescript-eslint": "^8.15.0",
-    "vite": "^5.0.8"
+    "typescript": "^5.9.2",
+    "typescript-eslint": "^8.41.0",
+    "vite": "^7.1.3"
   },
   "engines": {
     "node": "^18.0.0 || >=20.0.0"
-  },
-  "packageManager": "yarn@4.9.4"
+  }
 }
