--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "react-hook-form": "^7.62.0",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.12",
-    "zod": "^4.1.3"
+    "zod": "^4.1.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.34.0",
@@ -66,5 +66,6 @@
   },
   "engines": {
     "node": "^18.0.0 || >=20.0.0"
-  }
+  },
+  "packageManager": "yarn@4.9.4"
 }
