chore(release): bump package.json version to 1.0.1

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "speezy-keycloakify",
-  "version": "v1.0.1",
+  "version": "1.0.1",
   "description": "Speezy Keycloakify Theme",
   "repository": {
     "type": "git",
